--- a/index.html
+++ b/index.html
@@ -6,10 +6,30 @@
 <!--Bootstrap Link-->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <!--CSS Link-->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Imperial+Script&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
-<title>DelTel Signup</title>
+<title>Dell Chat-Signup</title>
 </head>
 <body>
+  <header>
+<br>
+  </header>
+  <main>
+    <div class="mainDiv">
+      <form >
+          <div>
+            <img src="./images/logo.png" alt="">
+            <h2>Dell Chat</h2>
+          </div>
+          <h2>Create account</h2>
+          <div id="form">
+             <button type="submit" class="btn btn-primary">Submit</button>
+          </div>      
+      </form>
+    </div>
+  </main>
 <!--JavaScript Link-->
 <script src="./style.css"></script>
 <!--Bootstrap Link-->
