--- a/index.html
+++ b/index.html
@@ -9,29 +9,41 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Imperial+Script&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Spirax&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
-<title>Dell Chat-Signup</title>
+<link rel="icon" type="image/x-icon" href="./icon.ico">
+<title>24*7 Chat-Signup</title>
 </head>
 <body>
   <header>
 <br>
   </header>
   <main>
-    <div class="mainDiv">
+    <div class="mainDiv bg-light">
       <form >
-          <div>
+          <div id="logoText">
             <img src="./images/logo.png" alt="">
-            <h2>Dell Chat</h2>
+            <h2>24 x 7 Chat</h2>
           </div>
-          <h2>Create account</h2>
-          <div id="form">
-             <button type="submit" class="btn btn-primary">Submit</button>
+          <h3>Create account</h3>
+          <div id="form1">
+            <label for="nameLabel">Enter your name</label>
+            <input class="bg-light" id="nameInput" type="text" placeholder="Enter name">
+            <label for="emailLabel">Enter your email</label>
+            <input class="bg-light" id="emailInput" type="email" placeholder="Enter a valid email">
+            <label for="">Choose a password</label>
+            <input class="bg-light" id="passwordInput" type="password" placeholder="Enter a password">
+            <label for="">Enter the password again</label>
+            <input class="bg-light" id="passwordInput2" type="password" placeholder="Enter a password">
+            <button>Get started</button>
           </div>      
       </form>
     </div>
   </main>
 <!--JavaScript Link-->
-<script src="./style.css"></script>
+<script src=""></script>
 <!--Bootstrap Link-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
