added js for totalError message

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <input class="bg-light" id="passwordInput2" type="password" placeholder="Enter a password">
             <span id="passwordError2"></span>
             <button id="submitButton">Get started</button>
+            <span id="totalError" style="text-align: center;"></span>
             <span>Forgot password? <a href="#">Click here</a>.</span>
             <span>Already have an account? <a href="#">Sign in</a> here.</span>
           </div>      
